Fix sidebar overlap scrollbar

--- a/src/site/styles/digital-garden-base.scss
+++ b/src/site/styles/digital-garden-base.scss
@@ -64,7 +64,7 @@ ul.task-list {
 .sidebar {
     position: fixed;
     top: 75px;
-    right: 0;
+    right: 17px;
     height: 100%;
     min-width: 25px;
     display: flex;
